Clamp Kalman velocity to non-negative and harden calibration
Backward distance-along-trip observations (from noisy GPS snapping)
drove the Kalman filter's internal velocity negative, corrupting
subsequent predictions until the next AVL update. Clamp x_vel at the
update step so the filter state stays physically meaningful.

Also: persist CalibrationTracker in the VehicleTrajectoryTracker
singleton so calibration samples survive activity recreation, use
ArrayDeque for O(1) sample eviction, add early-exit in
findPredictionAt for time-ordered predictions, and reduce inverse-CDF
bisection iterations from 50 to 30.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>